# bayesian-networks-with-examples-in-r-in-python

./: Dockerfile  README.md  build.sh  clean.sh  docker-compose.yml  index.md  publish.sh  pyproject.toml
.devcontainer/: devcontainer.json
jupyterbook/: _config.yml  _toc.yml
mypkg/: display.py
notebooks/chapter01/: 00-chapter01.md  01-chapter01-section01.ipynb  02-chapter01-section02.ipynb  03-chapter01-section03.ipynb  04-chapter01-section04.ipynb
