[tool.poetry]
name = "mypkg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
jupyter = "^1.0.0"
pandas = "^2.0.3"
seaborn = "^0.12.2"
requests = "^2.31.0"
tqdm = "^4.65.0"
invoke = "^2.2.0"
tabulate = "^0.9.0"
nbqa = "^1.7.0"
pytest = "^7.4.0"
pyarrow = "^12.0.1"
pytest-cov = "^4.1.0"
openpyxl = "^3.1.2"
rdata = "^0.9"
plotly = "^5.15.0"
scipy = "^1.11.1"
statsmodels = "^0.14.0"
pymc = ">=5"
arviz = "^0.16.1"
arch = "^6.1.0"
joblib = "^1.3.2"
jupyter-book = "^0.15.1"
ghp-import = "^2.1.0"
pgmpy = "^0.1.24"
pygraphviz = "^1.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
black = {extras = ["jupyter"], version = "^23.7.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
